set jvm flags for travis